k8s/03-imap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imap-deployment
  namespace: ens-backend-demo
  labels:
    app: imap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imap
  template:
    metadata:
      labels:
        app: imap
    spec:
      containers:
        - name: imap
          image: zkfr/imap:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
